tests/arrays/arrays.exp
Error: Arrays.js:10
 10: foo(a[1]);
         ^^^^ number. This type is incompatible with the expected param type of
  4: function foo(x:string) { }
                    ^^^^^^ string

Error: numeric_elem.js:7
  7: (arr[day]: string); // error: number ~> string
      ^^^^^^^^ number. This type is incompatible with
  7: (arr[day]: string); // error: number ~> string
                ^^^^^^ string


Found 2 errors
